src/styles/SelectedFlags.css
.selectedBox {
    border-radius: 4px;
    border:3px solid;
    font-size: 1.2em;          
    display: inline-block;
    margin:0.1em;
    text-align: center;
    height:3em;
    color: inherit;
}

div > p {
    margin-left:0.2em;
}

.selectedFlag {
    display: inline-block;
    padding: 0.2em;
    width:3.5em;
    height:2.5em;
    vertical-align: middle;
}

.selectedBox:hover {
    background-color:#e0e0eb;
    cursor:pointer;
}

